crates/pixtuoid/tests/snapshots/layout_golden__cubicle_aisle_96x72.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.cubicle_aisle
---
Bounds {
    x: 27,
    y: 64,
    width: 69,
    height: 8,
}
