crates/pixtuoid/tests/snapshots/layout_golden__cubicle_band_96x72.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.cubicle_band
---
Bounds {
    x: 27,
    y: 21,
    width: 69,
    height: 43,
}
