crates/pixtuoid/tests/snapshots/layout_golden__desks_192x160.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.home_desks
---
[
    Point {
        x: 64,
        y: 62,
    },
    Point {
        x: 86,
        y: 62,
    },
    Point {
        x: 64,
        y: 76,
    },
    Point {
        x: 86,
        y: 76,
    },
    Point {
        x: 116,
        y: 62,
    },
    Point {
        x: 138,
        y: 62,
    },
    Point {
        x: 116,
        y: 76,
    },
    Point {
        x: 138,
        y: 76,
    },
]
