crates/pixtuoid/tests/snapshots/layout_golden__desks_96x72.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.home_desks
---
[
    Point {
        x: 35,
        y: 30,
    },
    Point {
        x: 57,
        y: 30,
    },
    Point {
        x: 35,
        y: 47,
    },
    Point {
        x: 57,
        y: 47,
    },
]
