crates/pixtuoid/tests/snapshots/layout_golden__desks_dense_seed6.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.home_desks
---
[
    Point {
        x: 76,
        y: 63,
    },
    Point {
        x: 96,
        y: 63,
    },
    Point {
        x: 76,
        y: 78,
    },
    Point {
        x: 96,
        y: 78,
    },
]
