crates/pixtuoid/tests/snapshots/layout_golden__desks_open_plan_seed2.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.home_desks
---
[
    Point {
        x: 67,
        y: 48,
    },
    Point {
        x: 89,
        y: 48,
    },
    Point {
        x: 67,
        y: 60,
    },
    Point {
        x: 89,
        y: 60,
    },
]
