crates/pixtuoid/tests/snapshots/layout_golden__meeting_96x72.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.meeting_room
---
Some(
    Bounds {
        x: 0,
        y: 21,
        width: 26,
        height: 25,
    },
)
